@@ -174,6 +174,9 @@
 	Fixed cursor marker in inactive window not being highlighted according to
 	CmpMismatch highlight group in :compare mode.
 
+	Fixed missing quote in an expression error message not displaying the
+	broken string.
+
 0.9.1-beta to 0.9.1
 
 	Fixed :clone and :copy refusing to copy broken symbolic links, even though C
